# VIP_Copy

./: .continue-here.md  .gitignore  CONTEXT.md  README.md  pyproject.toml  requirements.txt
.planning/: HANDOFF.json  INGEST-CONFLICTS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.scratch/: README.md
docs/: README.md  deepseek_rate_limit_facts.md  design.md  history.md  memory.md  methodology.md  reference_v2_schema_design.md  research.md  rubrics.md  skills_redesign_session_2026-05-28.md  system-walkthrough.md  system_improvement_acceptance.md  vip-copy-workshop.md
scripts/: _common.sh  install.sh  resume.sh  run_canary.sh  run_large_template.sh  run_quick.sh
seers_harness/: __init__.py
tests/: __init__.py  conftest.py  test_08_06_token_cost_observed.py  test_08_07_behavioral_metrics.py  test_08_11_trial_runner_narrow.py  test_batch_summary_writer.py  test_dag_runner_integration.py  test_dag_runner_skill_dispatch.py  test_deepseek_rate_limit_facts.py  test_delta_portfolio.py  test_evidence_writer.py  test_evolution_delta_contract.py  test_evolution_tools.py  test_exception_classifier.py  test_index_writer.py  test_intake_fields.py  test_intake_request_preprocessing.py  test_models_bridge.py  test_models_candidate.py  test_models_factor.py  test_models_no_self_rated_fields.py  test_models_personalized_pipeline.py  test_models_rubric.py  test_offline_export.py  test_payloads_disclosure.py  test_payloads_loop06_audit.py  test_payloads_split_pipeline.py  test_phase09_acceptance_gates.py  test_phase09_skill_contract.py  test_portfolio_journal.py  (+29 more)
(+222 files in other folders)
