[project]
name = "seers-harness"
version = "0.1.0"
description = "True tool-use harness for personalized recommendation copy generation, evaluation, and evolution"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
]

[project.optional-dependencies]
llm = [
    "openai>=1.40",
]
dev = [
    "openai>=1.40",
    "pytest>=8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["seers_harness*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
