[project]
name = "vip-copy"
version = "0.1.0"
description = "Production harness for personalized ecommerce copy generation, evaluation, offline tables, and skill evolution"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
]

[project.optional-dependencies]
llm = [
    "openai>=1.40",
]
dev = [
    "openai>=1.40",
    "pytest>=8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["seers_harness*"]

[project.scripts]
vip-copy = "seers_harness.validation.runner:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
